--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^1.35.6",
     "core-js": "^3.8.3",
+    "moment": "^2.29.4",
     "pinia": "^2.0.21",
     "pinia-plugin-persist": "^1.0.0",
     "vue": "^3.2.13",
